Fix header images bleeding together
Set a margin right for secondary hero text and logo.

--- a/style.css
+++ b/style.css
@@ -2,10 +2,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
-  min-width: 100vw;
 }
 
-.benedict {
+.header-image {
   display: flex;
   box-shadow:  4px 6px 32px black;
   border-radius: 30px;
@@ -14,12 +13,12 @@ body {
   width: 33%;
   min-width: 600px;
   max-width: 1000px;
-
 }
 
 .bagel-daze-logo {
   padding-top: 35px;
   margin-left: -30px;
+  margin-right: 1075px;
   position: relative;
 }
 
@@ -163,10 +162,12 @@ font {
   margin: 4px;
   padding-bottom: 8px;
   position: relative;
+  min-width: 1000px;
 }
 
 .bagel-sammy {
   width: 300px;
+  height: 250px;
   border-radius: 30px;
   border: solid 3px #3882f6;
   box-shadow:  2px 2px 16px black; 
